--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
     
     #home::before{
         content: "";
-        background: url("/New folder/burger.jpeg") no-repeat center center/cover;
+        background: url("New folder/burger.jpeg") no-repeat center center/cover;
         position: absolute;
         height: 90%;
         width: 100%;
